@@ -1,6 +1,9 @@
 ### 3.4.1 (Released 20XX-XX-XX) ###
 - Handle searching on repetitions where submitted search field contains an
   index.
+- Allow container data to be read (and base64 encoded) by using a
+  RFMcontainer=base64 query string parameter on record and layout level
+  read operations.
 
 ### 3.4.0 (Released 2015-05-07) ###
 - Experimental PDO: MySQL improvements.
